0.8.1.s
    - report data read and wrote to a client relative to Dfile size
    - no double syslog message
    - log more of what the client says

0.8.1.r
    - bugfix

0.8.1.q
    - better rcpt accounting/logging
    - smtp functions returning SYSERROR get proper SMTP reply

0.8.1.p
    - better mail from/rcpt to metric counting
    - WRITE_BEFORE_BANNER config file bugfix

0.8.1.o
    - bugfixes

0.8.1.n
    - consuistent metrics in tempfail mode
    - SMTP mode changes are logged
    - Receive logging standard adhered to

0.8.1.m
    - Auth logging fixed
    - RBL logging fixed

0.8.1.l
    - makefile patch
    - RBL "secret messages" bugfix
    - SIMTA_UID available in the content filter
    - RBL accounting bugfig
    - switched from double to single linked list for connection_info tracking
    - syslog openlog() bug fixed

0.8.1.k
    - bugfix for connection search uninitilized variable fixed

0.8.1.j
    - simta unique PIDs
    - RBL logging cleaned up
    - connection throttling on a per IP basis introduced

0.8.1.i
    - pidfd locking hopefully better
    - Timezone info added to Received header
    - logging Members Only accept/deny explained
    - logging expansion depth metric
    - bugfix for sender matching memonly group

0.8.1.h
    - MAXHOSTNAMELEN bug fixed
    - RBL logging now includes failure/accept codes
    - better receive logging
    - DATA_SESSION_WAIT added to simta.c
    - bug: JAIL_HOST bugfixes

0.8.1.g
    - logging bugfixes

0.8.1.f
    - snet bugfixes

0.8.1.e
    - bugfix

0.8.1.d
    - content filter now logs who AUTHed

0.8.1.c
    - f_data better optimized for content filter
    - better error propagation

0.8.1.b
    - bugfix TARPIT rcpt to always accepts
    - bugfix for content filter illegal accept return in tarpit mode
    - bugfixes for libsnet
    - log change for base64 encode errors
    - receive always checks for write before banner

0.8.1.a
    - content filter message propogated to SMTP client